# sicg-repo

./: README.md  dashboard.html  dashboard_data.json  pyproject.toml
.github/workflows/: ci.yml
docs/adr/: 0001-dataclasses-vs-pydantic.md  0002-reglas-antes-que-ml.md  README.md  architecture.md
src/sicg/: config.py  pipeline.py
src/sicg.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/sicg/api/: main.py
src/sicg/api/routers/: signals.py  summary.py
src/sicg/correlation/: risk_scoring.py  rules_engine.py
src/sicg/ingestion/: aws_cost.py  aws_iam.py  base.py  entra_id.py  synthetic.py
src/sicg/normalization/: schemas.py
src/sicg/response/: notifiers.py
src/sicg/storage/: repository.py
tests/unit/: test_api.py  test_aws_cost.py  test_aws_iam.py  test_entra_id.py  test_risk_scoring.py  test_rules_engine.py
